fix: check installed langs

--- a/run_03_install_nodejs_bins.sh.tmpl
+++ b/run_03_install_nodejs_bins.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-if type nvm > /dev/null 2>&1; then
+if command -v nvm > /dev/null 2>&1; then
     {{ range .languages.nodejs.versions -}}
     nvm install {{ . | quote }}
     {{ end -}}
@@ -8,7 +8,7 @@ else
     echo nvmコマンドが見つかりません。Node.jsのインストールをスキップします。
 fi
 
-if type pyenv > /dev/null 2>&1; then
+if command -v pyenv > /dev/null 2>&1; then
     {{ range .languages.python.versions -}}
     pyenv install {{ . | quote }}
     {{ end -}}
