--- a/run_03_install_languages.sh.tmpl
+++ b/run_03_install_languages.sh.tmpl
@@ -1,9 +1,6 @@
 #!/bin/bash
 
-export NVM_DIR="$HOME/.nvm"
-if [ -s "$NVM_DIR/nvm.sh" ]; then
-  \. "$NVM_DIR/nvm.sh"
-fi
+source ~/.zshrc
 
 if command -v nvm > /dev/null 2>&1; then
     {{ range .languages.nodejs.versions -}}
